--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -19,6 +19,8 @@
     }
 
     &__window {
+        width: 450px;
+        height: 180px;
         background: var(--white);
         padding: 16px;
     }
